Updated summer student post.md

--- a/_posts/2025-08-15-test.md
+++ b/_posts/2025-08-15-test.md
@@ -7,14 +7,4 @@ tags:
   - McCaig Institute
 ---
 
-We want to extend the heartiest of congratulations to our three summer students on their wonderful poster and podium presentations last week!
-
-Sam Chow, Riley Dunn, and Ben Lutzko have all been exceptionally hard working this summer, and contributed a great deal to the research underway
-
-in the LIMB Lab this summer! They presented their work at the McCaig Institute Summer Symposium and the Biomedical Engineering Summer Student Symposium.
-
-Samantha presented on her study evaluating the biomechanics of ankle-foot orthoses (AFOs), Riley presented his work on changes to osteoarthritic ankle 
-
-biomechanics in the affected and contralateral ankles, while Ben presented his work on differences in motion capture and dual fluoroscopy when evaluating 
-
-advanced footwear technology (AFTs). We are so proud of Sam, Riley, and Ben, and are so excited for what they are going to accomplish in the future!
+We want to extend the heartiest of congratulations to our three summer students on their wonderful poster and podium presentations last week! Sam Chow, Riley Dunn, and Ben Lutzko have all been exceptionally hard working this summer, and contributed a great deal to the research underway in the LIMB Lab this summer! They presented their work at the McCaig Institute Summer Symposium and the Biomedical Engineering Summer Student Symposium. Samantha presented on her study evaluating the biomechanics of ankle-foot orthoses (AFOs), Riley presented his work on changes to osteoarthritic ankle biomechanics in the affected and contralateral ankles, while Ben presented his work on differences in motion capture and dual fluoroscopy when evaluating advanced footwear technology (AFTs). We are so proud of Sam, Riley, and Ben, and are so excited for what they are going to accomplish in the future!
